--- a/Sex_education/style.css
+++ b/Sex_education/style.css
@@ -8,6 +8,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Mulish:wght@200;700&family=Old+Standard+TT:wght@700&family=Tajawal:wght@300&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Mulish:wght@200;700&family=Old+Standard+TT:wght@700&family=Oswald:wght@400;500&family=Tajawal:wght@300&display=swap');
+
 
 
 
@@ -174,6 +176,7 @@ p{
 
 h1 {
     font-family:"Old Standard TT", Bold;
+    /* font-family: "Oswald"; */
     font-size: 50px;  
 }
 
@@ -184,6 +187,7 @@ h3 {
 
  h2, h4 {    
   font-family:"Courgette" ;
+  color: red;
 }
 @media screen and (min-width: 768px) {
     body {
